<resources>
    <string name="app_name">New KakaoBot</string>
    <string name="action_settings">Settings</string>
    <string name="no_read_permission">It must have read storage permission</string>
    <string name="file_not_found">Could\'t find your project</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="reloaded">Script has been reloaded.</string>
    <string name="create_project">Create new KakaoBot</string>
    <string name="project_name">Project name</string>
    <string name="ok">OK</string>
    <string name="project_subtitle">Project subtitle</string>
    <string name="cancel">Cancel</string>
    <string name="create_failed">Failed to create KakaoBot</string>
    <string name="create_succeed">Project create completed</string>
    <string name="project_enable">Project enable</string>
    <string name="delete_check">Are you sure?</string>
    <string name="need_permissions">Please allow read notification permissions.</string>
    <string name="need_wear_app">Please install the android wear app.</string>
    <string name="title_activity_debug" translatable="false">DebugActivity</string>
    <string name="no_space_title">It must have a title</string>
    <string name="action_feedback">Feedback</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="copyright">Copyright 2017 Astro. All rights reserved.</string>
    <string name="copyright2">Developed based on SuYong\'s KakaoBot</string>
    <string name="github_icon">Github Icon</string>
    <string name="action_about">About</string>
    <string name="image">Image</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
</resources>
