<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.astro.kakaobot.AboutActivity">

    <ImageView
        android:id="@+id/launcher_icon"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/launcher_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/copyright"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/copyright2"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"/>

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@mipmap/ic_github_circle"
        android:contentDescription="@string/github_icon"
        android:onClick="toGithub"/>

</LinearLayout>
