<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_edit_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/project_name"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/save_title"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:background="@mipmap/ic_save"
                    android:backgroundTint="#694436"
                    android:contentDescription="@string/save"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_edit_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/project_subtitle"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/save_subtitle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:background="@mipmap/ic_save"
                    android:backgroundTint="#694436"
                    android:contentDescription="@string/save"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/script_enable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/project_enable"/>

                <ImageButton
                    android:id="@+id/refresh_project"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@mipmap/ic_refresh"
                    android:backgroundTint="#616161"
                    android:contentDescription="@string/refresh"/>

                <ImageButton
                    android:id="@+id/delete_project"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@mipmap/ic_delete"
                    android:backgroundTint="#F44336"
                    android:contentDescription="@string/delete"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>