<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/project_name"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/title_set"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/ic_save"
                android:backgroundTint="#616161"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/project_subtitle"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/subtitle_set"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/ic_save"
                android:backgroundTint="#616161"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/script_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project_enable"/>

            <ImageButton
                android:id="@+id/refresh_project"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/ic_refresh"
                android:backgroundTint="#616161"/>

            <ImageButton
                android:id="@+id/delete_project"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/ic_delete"
                android:backgroundTint="#F44336"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>